import React from 'react'
import { MemoryRouter } from 'react-router'
import { render, waitFor } from '@testing-library/react'
import { TestWrapper } from '@common/utils/testUtils'
import type { ConnectorInfoDTO } from 'services/cd-ng'
import VerifyOutOfClusterDelegate from '../VerifyOutOfClusterDelegate'
import delegateNameresponse from './mockData/delegate-name-response-error.json'
import testConnectionSuccess from './mockData/test-connection-success.json'
import { K8WithInheritFromDelegate, ManualK8s, Docker, Nexus, Artifactory, GCP, AWS } from './mockData/connectorsMock'

jest.mock('services/portal', () => ({
  useGetDelegateFromId: jest.fn().mockImplementation(() => {
    return { ...delegateNameresponse, refetch: jest.fn(), error: null, loading: false }
  })
}))
jest.mock('services/cd-ng', () => ({
  useGetTestConnectionResult: jest.fn().mockImplementation(() => {
    return { data: testConnectionSuccess, refetch: jest.fn(), error: null }
  })
}))

describe('Verification step for out of cluster delegate', () => {
  test('render VerifyOutOfClusterDelegate for K8s in edit screen', async () => {
    const { container, findByText } = render(
      <MemoryRouter>
        <TestWrapper>
          <VerifyOutOfClusterDelegate
            type="K8sCluster"
            name="sample-name"
            connectorInfo={ManualK8s as ConnectorInfoDTO}
            isStep={false}
          />
        </TestWrapper>
      </MemoryRouter>
    )

    await waitFor(() => expect(findByText('connectors.testConnectionStep.placeholderErrors')).not.toBeNull())

    expect(container).toMatchSnapshot()
  }),
    test('render VerifyOutOfClusterDelegate for K8s and last step', () => {
      const { container } = render(
        <MemoryRouter>
          <TestWrapper>
            <VerifyOutOfClusterDelegate
              type="K8sCluster"
              name="sample-name"
              connectorInfo={K8WithInheritFromDelegate as ConnectorInfoDTO}
              isStep={true}
            />
          </TestWrapper>
        </MemoryRouter>
      )

      expect(container).toMatchSnapshot()
    }),
    test('render VerifyOutOfClusterDelegate for Docker', () => {
      const { container } = render(
        <MemoryRouter>
          <TestWrapper>
            <VerifyOutOfClusterDelegate
              type="DockerRegistry"
              name="sample-name"
              connectorInfo={Docker as ConnectorInfoDTO}
              isStep={true}
            />
          </TestWrapper>
        </MemoryRouter>
      )

      expect(container).toMatchSnapshot()
    }),
    test('render VerifyOutOfClusterDelegate for Nexus', () => {
      const { container } = render(
        <MemoryRouter>
          <TestWrapper>
            <VerifyOutOfClusterDelegate
              type="Nexus"
              name="sample-name"
              connectorInfo={Nexus as ConnectorInfoDTO}
              isStep={true}
            />
          </TestWrapper>
        </MemoryRouter>
      )

      expect(container).toMatchSnapshot()
    }),
    test('render VerifyOutOfClusterDelegate for GCP', () => {
      const { container } = render(
        <MemoryRouter>
          <TestWrapper>
            <VerifyOutOfClusterDelegate
              type="Gcp"
              name="sample-name"
              connectorInfo={GCP as ConnectorInfoDTO}
              isStep={true}
            />
          </TestWrapper>
        </MemoryRouter>
      )

      expect(container).toMatchSnapshot()
    }),
    test('render VerifyOutOfClusterDelegate for AWS', () => {
      const { container } = render(
        <MemoryRouter>
          <TestWrapper>
            <VerifyOutOfClusterDelegate
              type="Aws"
              name="sample-name"
              connectorInfo={AWS as ConnectorInfoDTO}
              isStep={true}
            />
          </TestWrapper>
        </MemoryRouter>
      )

      expect(container).toMatchSnapshot()
    }),
    test('render VerifyOutOfClusterDelegate for Artifactory', () => {
      const { container } = render(
        <MemoryRouter>
          <TestWrapper>
            <VerifyOutOfClusterDelegate
              type="Artifactory"
              name="sample-name"
              connectorInfo={Artifactory as ConnectorInfoDTO}
              isStep={true}
            />
          </TestWrapper>
        </MemoryRouter>
      )

      expect(container).toMatchSnapshot()
    })
})
