// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Verification step for out of cluster delegate render VerifyOutOfClusterDelegate for AWS 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-small StyledProps--padding-left-small StyledProps--padding-bottom-large"
    style="height: 100%;"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
      >
        connectors.stepThreeName
      </p>
      <div
        class="StyledProps--font StyledProps--main content contentMinHeight StyledProps--padding-top-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
          id="steps-progress"
        >
          <div
            class="StepsProgress--progressBar"
          >
            <div
              class="bp3-progress-bar bp3-intent-warning bp3-no-stripes StepsProgress--progressHeight"
            >
              <div
                class="bp3-progress-meter"
                style="width: 0%;"
              />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-yellow500 StyledProps--margin-right-small"
                data-icon="steps-spinner"
              >
                <svg
                  height="16"
                  viewBox="0 0 128 128"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                      fill="#ff8e02"
                    />
                    <path
                      d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                      fill="#ffddb3"
                      fill-opacity="0.3"
                    />
                    <path
                      d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                      fill="#ffd29a"
                      fill-opacity="0.4"
                    />
                    <path
                      d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                      fill="#ffc680"
                      fill-opacity="0.5"
                    />
                    <path
                      d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                      fill="#ffbb67"
                      fill-opacity="0.6"
                    />
                    <path
                      d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                      fill="#ffb04d"
                      fill-opacity="0.7"
                    />
                    <path
                      d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                      fill="#ffa535"
                      fill-opacity="0.8"
                    />
                    <path
                      d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                      fill="#ff991b"
                      fill-opacity="0.9"
                    />
                    <animatetransform
                      attributeName="transform"
                      calcMode="discrete"
                      dur="1200ms"
                      repeatCount="indefinite"
                      type="rotate"
                      values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                    />
                  </g>
                </svg>
              </span>
              <div
                class="StyledProps--font StyledProps--main"
                style="font-weight: bold;"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 100%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                  >
                    connectors.testConnectionStep.validationText.aws
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main btnWrapper"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          continue
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Verification step for out of cluster delegate render VerifyOutOfClusterDelegate for Artifactory 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-small StyledProps--padding-left-small StyledProps--padding-bottom-large"
    style="height: 100%;"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
      >
        connectors.stepThreeName
      </p>
      <div
        class="StyledProps--font StyledProps--main content contentMinHeight StyledProps--padding-top-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
          id="steps-progress"
        >
          <div
            class="StepsProgress--progressBar"
          >
            <div
              class="bp3-progress-bar bp3-intent-warning bp3-no-stripes StepsProgress--progressHeight"
            >
              <div
                class="bp3-progress-meter"
                style="width: 0%;"
              />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-yellow500 StyledProps--margin-right-small"
                data-icon="steps-spinner"
              >
                <svg
                  height="16"
                  viewBox="0 0 128 128"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                      fill="#ff8e02"
                    />
                    <path
                      d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                      fill="#ffddb3"
                      fill-opacity="0.3"
                    />
                    <path
                      d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                      fill="#ffd29a"
                      fill-opacity="0.4"
                    />
                    <path
                      d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                      fill="#ffc680"
                      fill-opacity="0.5"
                    />
                    <path
                      d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                      fill="#ffbb67"
                      fill-opacity="0.6"
                    />
                    <path
                      d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                      fill="#ffb04d"
                      fill-opacity="0.7"
                    />
                    <path
                      d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                      fill="#ffa535"
                      fill-opacity="0.8"
                    />
                    <path
                      d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                      fill="#ff991b"
                      fill-opacity="0.9"
                    />
                    <animatetransform
                      attributeName="transform"
                      calcMode="discrete"
                      dur="1200ms"
                      repeatCount="indefinite"
                      type="rotate"
                      values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                    />
                  </g>
                </svg>
              </span>
              <div
                class="StyledProps--font StyledProps--main"
                style="font-weight: bold;"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 100%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                  >
                    connectors.testConnectionStep.validationText.artifactory
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main btnWrapper"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          continue
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Verification step for out of cluster delegate render VerifyOutOfClusterDelegate for Docker 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-small StyledProps--padding-left-small StyledProps--padding-bottom-large"
    style="height: 100%;"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
      >
        connectors.stepThreeName
      </p>
      <div
        class="StyledProps--font StyledProps--main content contentMinHeight StyledProps--padding-top-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
          id="steps-progress"
        >
          <div
            class="StepsProgress--progressBar"
          >
            <div
              class="bp3-progress-bar bp3-intent-warning bp3-no-stripes StepsProgress--progressHeight"
            >
              <div
                class="bp3-progress-meter"
                style="width: 0%;"
              />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-yellow500 StyledProps--margin-right-small"
                data-icon="steps-spinner"
              >
                <svg
                  height="16"
                  viewBox="0 0 128 128"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                      fill="#ff8e02"
                    />
                    <path
                      d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                      fill="#ffddb3"
                      fill-opacity="0.3"
                    />
                    <path
                      d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                      fill="#ffd29a"
                      fill-opacity="0.4"
                    />
                    <path
                      d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                      fill="#ffc680"
                      fill-opacity="0.5"
                    />
                    <path
                      d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                      fill="#ffbb67"
                      fill-opacity="0.6"
                    />
                    <path
                      d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                      fill="#ffb04d"
                      fill-opacity="0.7"
                    />
                    <path
                      d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                      fill="#ffa535"
                      fill-opacity="0.8"
                    />
                    <path
                      d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                      fill="#ff991b"
                      fill-opacity="0.9"
                    />
                    <animatetransform
                      attributeName="transform"
                      calcMode="discrete"
                      dur="1200ms"
                      repeatCount="indefinite"
                      type="rotate"
                      values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                    />
                  </g>
                </svg>
              </span>
              <div
                class="StyledProps--font StyledProps--main"
                style="font-weight: bold;"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 100%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                  >
                    connectors.testConnectionStep.validationText.docker
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main btnWrapper"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          continue
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Verification step for out of cluster delegate render VerifyOutOfClusterDelegate for GCP 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-small StyledProps--padding-left-small StyledProps--padding-bottom-large"
    style="height: 100%;"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
      >
        connectors.stepThreeName
      </p>
      <div
        class="StyledProps--font StyledProps--main content contentMinHeight StyledProps--padding-top-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
          id="steps-progress"
        >
          <div
            class="StepsProgress--progressBar"
          >
            <div
              class="bp3-progress-bar bp3-intent-warning bp3-no-stripes StepsProgress--progressHeight"
            >
              <div
                class="bp3-progress-meter"
                style="width: 0%;"
              />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-yellow500 StyledProps--margin-right-small"
                data-icon="steps-spinner"
              >
                <svg
                  height="16"
                  viewBox="0 0 128 128"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                      fill="#ff8e02"
                    />
                    <path
                      d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                      fill="#ffddb3"
                      fill-opacity="0.3"
                    />
                    <path
                      d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                      fill="#ffd29a"
                      fill-opacity="0.4"
                    />
                    <path
                      d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                      fill="#ffc680"
                      fill-opacity="0.5"
                    />
                    <path
                      d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                      fill="#ffbb67"
                      fill-opacity="0.6"
                    />
                    <path
                      d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                      fill="#ffb04d"
                      fill-opacity="0.7"
                    />
                    <path
                      d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                      fill="#ffa535"
                      fill-opacity="0.8"
                    />
                    <path
                      d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                      fill="#ff991b"
                      fill-opacity="0.9"
                    />
                    <animatetransform
                      attributeName="transform"
                      calcMode="discrete"
                      dur="1200ms"
                      repeatCount="indefinite"
                      type="rotate"
                      values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                    />
                  </g>
                </svg>
              </span>
              <div
                class="StyledProps--font StyledProps--main"
                style="font-weight: bold;"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 100%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                  >
                    connectors.testConnectionStep.validationText.gcp
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main btnWrapper"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          continue
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Verification step for out of cluster delegate render VerifyOutOfClusterDelegate for K8s and last step 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-small StyledProps--padding-left-small StyledProps--padding-bottom-large"
    style="height: 100%;"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
      >
        connectors.stepThreeName
      </p>
      <div
        class="StyledProps--font StyledProps--main content contentMinHeight StyledProps--padding-top-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
          id="steps-progress"
        >
          <div
            class="StepsProgress--progressBar"
          >
            <div
              class="bp3-progress-bar bp3-intent-warning bp3-no-stripes StepsProgress--progressHeight"
            >
              <div
                class="bp3-progress-meter"
                style="width: 0%;"
              />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-yellow500 StyledProps--margin-right-small"
                data-icon="steps-spinner"
              >
                <svg
                  height="16"
                  viewBox="0 0 128 128"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                      fill="#ff8e02"
                    />
                    <path
                      d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                      fill="#ffddb3"
                      fill-opacity="0.3"
                    />
                    <path
                      d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                      fill="#ffd29a"
                      fill-opacity="0.4"
                    />
                    <path
                      d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                      fill="#ffc680"
                      fill-opacity="0.5"
                    />
                    <path
                      d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                      fill="#ffbb67"
                      fill-opacity="0.6"
                    />
                    <path
                      d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                      fill="#ffb04d"
                      fill-opacity="0.7"
                    />
                    <path
                      d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                      fill="#ffa535"
                      fill-opacity="0.8"
                    />
                    <path
                      d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                      fill="#ff991b"
                      fill-opacity="0.9"
                    />
                    <animatetransform
                      attributeName="transform"
                      calcMode="discrete"
                      dur="1200ms"
                      repeatCount="indefinite"
                      type="rotate"
                      values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                    />
                  </g>
                </svg>
              </span>
              <div
                class="StyledProps--font StyledProps--main"
                style="font-weight: bold;"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 100%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                  >
                    
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main btnWrapper"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          continue
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Verification step for out of cluster delegate render VerifyOutOfClusterDelegate for K8s in edit screen 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-small StyledProps--padding-left-small StyledProps--padding-bottom-large"
    style="height: 100%;"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
      >
        connectors.stepThreeName
      </p>
      <div
        class="StyledProps--font StyledProps--main content StyledProps--padding-top-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
          id="steps-progress"
        >
          <div
            class="StepsProgress--progressBar"
          >
            <div
              class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
            >
              <div
                class="bp3-progress-meter"
                style="width: 100%;"
              />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                icon="error"
              >
                <svg
                  data-icon="error"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    error
                  </desc>
                  <path
                    d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="StyledProps--font StyledProps--main"
                style=""
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 100%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                  >
                    
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
                  >
                    connectors.testConnectionStep.placeholderError
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Verification step for out of cluster delegate render VerifyOutOfClusterDelegate for Nexus 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-small StyledProps--padding-left-small StyledProps--padding-bottom-large"
    style="height: 100%;"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
      >
        connectors.stepThreeName
      </p>
      <div
        class="StyledProps--font StyledProps--main content contentMinHeight StyledProps--padding-top-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
          id="steps-progress"
        >
          <div
            class="StepsProgress--progressBar"
          >
            <div
              class="bp3-progress-bar bp3-intent-warning bp3-no-stripes StepsProgress--progressHeight"
            >
              <div
                class="bp3-progress-meter"
                style="width: 0%;"
              />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-yellow500 StyledProps--margin-right-small"
                data-icon="steps-spinner"
              >
                <svg
                  height="16"
                  viewBox="0 0 128 128"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                      fill="#ff8e02"
                    />
                    <path
                      d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                      fill="#ffddb3"
                      fill-opacity="0.3"
                    />
                    <path
                      d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                      fill="#ffd29a"
                      fill-opacity="0.4"
                    />
                    <path
                      d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                      fill="#ffc680"
                      fill-opacity="0.5"
                    />
                    <path
                      d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                      fill="#ffbb67"
                      fill-opacity="0.6"
                    />
                    <path
                      d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                      fill="#ffb04d"
                      fill-opacity="0.7"
                    />
                    <path
                      d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                      fill="#ffa535"
                      fill-opacity="0.8"
                    />
                    <path
                      d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                      fill="#ff991b"
                      fill-opacity="0.9"
                    />
                    <animatetransform
                      attributeName="transform"
                      calcMode="discrete"
                      dur="1200ms"
                      repeatCount="indefinite"
                      type="rotate"
                      values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                    />
                  </g>
                </svg>
              </span>
              <div
                class="StyledProps--font StyledProps--main"
                style="font-weight: bold;"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 100%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                  >
                    connectors.testConnectionStep.validationText.nexus
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main btnWrapper"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          continue
        </span>
      </button>
    </div>
  </div>
</div>
`;
